--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "type": "module",
   "private": true,
   "volta": {
-    "node": "20.18.0"
+    "node": "22.11.0"
   },
   "engines": {
     "node": "^18.0.0 || ^20.0.0 || ^22.0.0",
@@ -29,19 +29,21 @@
     "clean": "nuxt cleanup",
     "start": "node .output/server/index.mjs",
     "tauri": "tauri",
-    "tauri:dev": "tauri dev",
-    "tauri:build": "tauri build",
-    "tauri:dev:mobile": "tauri android dev",
-    "tauri:build:mobile": "tauri android build",
+    "tauri:dev": "cross-env PLATFORM_ENV=native tauri dev",
+    "tauri:build": "cross-env PLATFORM_ENV=native tauri build",
+    "tauri:dev:mobile": "cross-env PLATFORM_ENV=native tauri android dev",
+    "tauri:build:mobile": "cross-env PLATFORM_ENV=native tauri android build",
     "docker:build": "docker build --build-arg VERSION_TAG=dev -t portfolio-shirsendu:dev .",
     "docker:start": "docker run --detach --name portfolio-shirsendu-dev --mount type=bind,source=$(pwd)/static,target=/app/static,readonly --env-file .env.prod -p 1000:3000 portfolio-shirsendu:dev",
     "tunnel": "untun tunnel --port 3000 http://localhost:3000"
   },
   "dependencies": {
     "@notionhq/client": "^2.2.15",
+    "@nuxt/eslint": "^0.6.1",
     "@nuxt/fonts": "^0.10.2",
     "@nuxt/image": "^1.8.1",
     "@nuxt/scripts": "^0.9.5",
+    "@nuxt/test-utils": "^3.14.4",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/seo": "^2.0.0-rc.23",
     "@nuxtjs/tailwindcss": "^6.12.2",
@@ -51,13 +53,13 @@
     "@vitejs/plugin-vue": "^5.1.4",
     "@vue-email/components": "^0.0.19",
     "@vue-email/render": "^0.0.9",
-    "@vueuse/core": "^11.1.0",
-    "@vueuse/nuxt": "^11.1.0",
+    "@vueuse/core": "^11.2.0",
+    "@vueuse/nuxt": "^11.2.0",
     "confbox": "^0.1.8",
     "date-fns": "^4.1.0",
-    "nodemailer": "^6.9.16",
     "nuxt": "^3.13.2",
     "nuxt-icons": "^3.2.1",
+    "nuxt-nodemailer": "^1.1.2",
     "nuxt-splide": "^1.1.1",
     "nuxt-time": "^1.0.2",
     "vee-validate": "^4.14.6",
@@ -67,10 +69,8 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.9",
-    "@nuxt/eslint": "^0.6.1",
-    "@nuxt/test-utils": "^3.14.4",
     "@tauri-apps/cli": "^2.0.4",
-    "@types/node": "^22.8.1",
+    "@types/node": "^22.8.6",
     "@types/nodemailer": "^6.4.16",
     "cross-env": "^7.0.3",
     "eslint": "^9.13.0",
