--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,10 @@ NITRO_PRESET=node-server
 NUXT_PUBLIC_API_BASE_URL=
 NUXT_PUBLIC_SCRIPTS_GOOGLE_ANALYTICS_ID=
 NUXT_PRIVATE_GMAIL=
-NUXT_PRIVATE_EMAIL_USERNAME=
-NUXT_PRIVATE_EMAIL_PASSWORD=
+NUXT_PRIVATE_DMAIL=
+NUXT_NODEMAILER_HOST=
+NUXT_NODEMAILER_PORT=
+NUXT_NODEMAILER_AUTH_USER=
+NUXT_NODEMAILER_AUTH_PASS=
 NUXT_PRIVATE_NOTION_KEY=
 NUXT_PRIVATE_NOTION_DB_ID=
