fix: github action android sdk added

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,14 +30,17 @@ jobs:
       id-token: write
 
     outputs:
-      image_name: ${{ steps.info.outputs.image_name }}
-      image_title: ${{ steps.info.outputs.image_title }}
-      buildtime: ${{ steps.info.outputs.buildtime }}
-      version: ${{ steps.info.outputs.version }}
+      image_name: ${{ steps.metadata.outputs.image_name }}
+      image_title: ${{ steps.metadata.outputs.image_title }}
+      buildtime: ${{ steps.metadata.outputs.buildtime }}
+      version: ${{ steps.metadata.outputs.version }}
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -50,19 +53,19 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract metadata (tags, labels) for Docker
-        id: metadata
+        id: meta
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.REPO }}
 
       - name: Set tags as environment variable
-        id: info
+        id: metadata
         run: |
           echo "Setting metadata to env variables"
-          echo "image_name=${{ fromJSON(steps.metadata.outputs.json).tags[1] }}" >> $GITHUB_OUTPUT
-          echo "image_title=${{ fromJSON(steps.metadata.outputs.json).labels['org.opencontainers.image.title'] }}" >> $GITHUB_OUTPUT
-          echo "buildtime=${{ fromJSON(steps.metadata.outputs.json).labels['org.opencontainers.image.created'] }}" >> $GITHUB_OUTPUT
-          echo "version=${{ fromJSON(steps.metadata.outputs.json).labels['org.opencontainers.image.version'] }}" >> $GITHUB_OUTPUT
+          echo "image_name=${{ fromJSON(steps.meta.outputs.json).tags[1] }}" >> $GITHUB_OUTPUT
+          echo "image_title=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.title'] }}" >> $GITHUB_OUTPUT
+          echo "buildtime=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.created'] }}" >> $GITHUB_OUTPUT
+          echo "version=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}" >> $GITHUB_OUTPUT
 
       - name: Build and push Docker image
         id: push
@@ -70,11 +73,11 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ steps.metadata.outputs.tags }}
-          labels: ${{ steps.metadata.outputs.labels }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
           build-args: |
-            BUILDTIME=${{ steps.info.outputs.buildtime }}
-            VERSION=${{ steps.info.outputs.version }}
+            BUILDTIME=${{ steps.metadata.outputs.buildtime }}
+            VERSION=${{ steps.metadata.outputs.version }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -83,7 +86,7 @@ jobs:
         with:
           subject-name: ${{ env.REGISTRY }}/${{ env.REPO }}
           subject-digest: ${{ steps.push.outputs.digest }}
-          push-to-registry: true
+          push-to-registry: false
 
   deploy_web:
     needs: build_web
@@ -231,6 +234,19 @@ jobs:
 
       - name: Install Dependencies
         run: pnpm install
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          distribution: 'oracle'
+
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v3
+
+        # Set the NDK_HOME environment variable
+      - name: Set NDK_HOME Environment Variable
+        run: echo "NDK_HOME=$ANDROID_NDK_HOME" >> $GITHUB_ENV
 
       - name: Setup Android Signing
         run: |
