--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,6 @@ name: Nuxt CD
 run-name: ${{ github.ref_name }}
 
 on:
-  workflow_dispatch:
   push:
     tags:
       - 'v*.*.*'
@@ -44,6 +43,8 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        with:
+          platforms: linux/amd64,linux/arm64
 
       - name: Log in to the Container registry
         uses: docker/login-action@v3
@@ -52,17 +53,21 @@ jobs:
           username: ${{ env.USERNAME }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract metadata (tags, labels) for Docker
+      - name: Extract Docker metadata
         id: meta
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.REPO }}
+          tags: |
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=sha,prefix=sha-,format=short
 
       - name: Set tags as environment variable
         id: metadata
         run: |
           echo "Setting metadata to env variables"
-          echo "image_name=${{ fromJSON(steps.meta.outputs.json).tags[1] }}" >> $GITHUB_OUTPUT
+          echo "image_name=${{ fromJSON(steps.meta.outputs.json).tags[0] }}" >> $GITHUB_OUTPUT
           echo "image_title=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.title'] }}" >> $GITHUB_OUTPUT
           echo "buildtime=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.created'] }}" >> $GITHUB_OUTPUT
           echo "version=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}" >> $GITHUB_OUTPUT
@@ -72,6 +77,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
@@ -142,9 +148,6 @@ jobs:
           - platform: 'windows-latest'
             args: ''
 
-          - platform: 'ubuntu-latest'
-            args: ''
-
     runs-on: ${{ matrix.platform }}
 
     steps:
@@ -157,6 +160,12 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf
 
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          # Those targets are only used on macos runners so it's in an `if` to slightly speed up windows and linux builds.
+          targets: ${{ matrix.platform == 'macos-latest' && 'aarch64-apple-darwin,x86_64-apple-darwin' || '' }}
+
       - name: Install pnpm
         uses: pnpm/action-setup@v4
 
@@ -165,12 +174,6 @@ jobs:
         with:
           node-version: lts/*
           cache: 'pnpm'
-
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          # Those targets are only used on macos runners so it's in an `if` to slightly speed up windows and linux builds.
-          targets: ${{ matrix.platform == 'macos-latest' && 'aarch64-apple-darwin,x86_64-apple-darwin' || '' }}
 
       - name: Install Dependencies
         run: pnpm install
@@ -203,7 +206,7 @@ jobs:
         include:
           - platform: 'ubuntu-latest'
             name: 'android'
-            args: ''
+            args: '--target aarch64-linux-android'
 
           # - platform: 'ubuntu-latest'
           #   name: 'ios'
@@ -215,19 +218,10 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v4
 
-      - name: Install OS Dependencies (Ubuntu only)
+      - name: Install OS Dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf
-
-      - name: Install pnpm
-        uses: pnpm/action-setup@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: lts/*
-          cache: 'pnpm'
 
       - name: Set up JDK 21
         uses: actions/setup-java@v3
@@ -242,12 +236,6 @@ jobs:
       - name: Set NDK_HOME Environment Variable
         run: echo "NDK_HOME=$ANDROID_NDK_HOME" >> $GITHUB_ENV
 
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-
-      - name: Install Dependencies
-        run: pnpm install
-
       - name: Setup Android Signing
         run: |
           cd native/gen/android
@@ -256,8 +244,23 @@ jobs:
           base64 -d <<< "${{ secrets.ANDROID_KEY_BASE64 }}" > $RUNNER_TEMP/keystore.jks
           echo "storeFile=$RUNNER_TEMP/keystore.jks" >> keystore.properties
 
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
+          cache: 'pnpm'
+
+      - name: Install Dependencies
+        run: pnpm install
+
       - name: Bulid Artifact
-        run: pnpm tauri ${{ matrix.name }} build
+        run: pnpm tauri build ${{ matrix.args }}
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
@@ -266,5 +269,5 @@ jobs:
           path: native/gen/android/app/build/outputs/apk/universal/release/app-universal-release.apk
 
   # deploy_mobile:
-  #   needs: build_desktop
+  #   needs: build_mobile
   #   runs-on: ubuntu-latest
