--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -205,7 +205,7 @@ jobs:
       matrix:
         include:
           - platform: 'ubuntu-latest'
-            name: 'android'
+            os: 'android'
             arch: 'aarch64-linux-android'
 
           # - platform: 'ubuntu-latest'
@@ -222,7 +222,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf
-          sudo apt-get install -y build-essential pkg-config libssl-dev openssl
+        # sudo apt-get install -y build-essential pkg-config libssl-dev openssl
 
       - name: Set up JDK 21
         uses: actions/setup-java@v3
@@ -235,7 +235,9 @@ jobs:
 
         # Set the NDK_HOME environment variable
       - name: Set NDK_HOME Environment Variable
-        run: echo "NDK_HOME=$ANDROID_NDK_HOME" >> $GITHUB_ENV
+        run: |
+          echo "NDK_HOME=$ANDROID_NDK_HOME" >> $GITHUB_ENV
+        # echo "OPENSSL_DIR=/usr/lib/ssl" >> $GITHUB_ENV
 
       - name: Setup Android Signing
         run: |
@@ -248,8 +250,8 @@ jobs:
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
 
-      - name: Install Target
-        run: rustup target add ${{ matrix.arch }}
+      # - name: Install Target
+      #   run: rustup target add ${{ matrix.arch }}
 
       - name: Install pnpm
         uses: pnpm/action-setup@v4
@@ -264,7 +266,7 @@ jobs:
         run: pnpm install
 
       - name: Bulid Artifact
-        run: pnpm tauri build --target ${{ matrix.arch }}
+        run: pnpm tauri ${{ matrix.os }} build
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
