--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -199,6 +199,7 @@ jobs:
 
     env:
       PLATFORM_ENV: native
+      ANDROID_HOME:
 
     strategy:
       fail-fast: false
@@ -206,7 +207,6 @@ jobs:
         include:
           - platform: 'ubuntu-latest'
             os: 'android'
-            arch: 'aarch64-linux-android armv7-linux-androideabi i686-linux-android x86_64-linux-android'
 
           # - platform: 'ubuntu-latest'
           #   name: 'ios'
@@ -223,25 +223,19 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf
 
-      - name: Set up JDK 21
-        uses: actions/setup-java@v3
+      - name: Setup Java
+        uses: actions/setup-java@v4
         with:
-          java-version: '21'
-          distribution: 'oracle'
+          distribution: 'temurin'
+          java-version: '17'
 
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
 
       - name: Setup Android NDK
-        id: setup-ndk
-        uses: nttld/setup-ndk@v1
-        with:
-          ndk-version: r27c
-          link-to-sdk: true
-
-      - name: Setup Android NDK Path
         run: |
-          echo "NDK_HOME=${{ steps.setup-ndk.outputs.ndk-path }}" >> $GITHUB_ENV
+          sdkmanager "ndk;27.0.11902837"
+          echo "NDK_HOME=${{ env.ANDROID_HOME }}/ndk/27.0.11902837" >> $GITHUB_ENV
 
       - name: Setup Android Signing
         run: |
@@ -253,10 +247,8 @@ jobs:
 
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
-
-      - name: Install Target
-        run: |
-          rustup target add ${{ matrix.arch }}
+        with:
+          targets: aarch64-linux-android,armv7-linux-androideabi,i686-linux-android,x86_64-linux-android
 
       - name: Install pnpm
         uses: pnpm/action-setup@v4
@@ -271,13 +263,13 @@ jobs:
         run: pnpm install
 
       - name: Bulid Artifact
-        run: pnpm tauri ${{ matrix.os }} build
+        run: pnpm tauri android build -v
 
       - name: Upload Artifact
-        uses: actions/upload-artifact@v4
+        uses: softprops/action-gh-release@v2
         with:
-          name: Shirsendu.Bairagi_1.16.3
-          path: native/gen/android/app/build/outputs/apk/universal/release/app-universal-release.apk
+          draft: true
+          files: ./native/gen/android/app/build/outputs/apk/universal/release/app-universal-release.apk
 
   # deploy_mobile:
   #   needs: build_mobile
