--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "node": "^20.15.0 || ^22.11.0",
     "pnpm": "^9.12.0"
   },
-  "packageManager": "pnpm@9.13.2",
+  "packageManager": "pnpm@9.14.4",
   "scripts": {
     "postinstall": "nuxt prepare",
     "dev": "nuxt dev",
@@ -39,41 +39,41 @@
   },
   "dependencies": {
     "@notionhq/client": "^2.2.15",
-    "@nuxt/eslint": "^0.7.0",
+    "@nuxt/eslint": "^0.7.2",
     "@nuxt/fonts": "^0.10.2",
     "@nuxt/image": "^1.8.1",
     "@nuxt/scripts": "^0.9.5",
     "@nuxt/test-utils": "^3.14.4",
     "@nuxtjs/color-mode": "^3.5.2",
-    "@nuxtjs/seo": "^2.0.0-rc.23",
+    "@nuxtjs/seo": "^2.0.2",
     "@nuxtjs/tailwindcss": "^6.12.2",
     "@splidejs/splide-extension-grid": "^0.4.1",
     "@tauri-apps/api": "^2.1.1",
     "@vite-pwa/nuxt": "^0.10.6",
-    "@vitejs/plugin-vue": "^5.2.0",
+    "@vitejs/plugin-vue": "^5.2.1",
     "@vue-email/components": "^0.0.21",
     "@vue-email/render": "^0.0.9",
-    "@vueuse/core": "^11.2.0",
-    "@vueuse/nuxt": "^11.2.0",
+    "@vueuse/core": "^12.0.0",
+    "@vueuse/nuxt": "^12.0.0",
     "confbox": "^0.1.8",
     "date-fns": "^4.1.0",
-    "nuxt": "^3.13.2",
+    "nuxt": "^3.14.1592",
     "nuxt-icons": "^3.2.1",
     "nuxt-nodemailer": "^1.1.2",
     "nuxt-splide": "^1.1.1",
-    "nuxt-time": "^1.0.2",
+    "nuxt-time": "^1.0.3",
     "vee-validate": "^4.14.7",
     "vue": "latest",
     "vue-router": "latest",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@changesets/cli": "^2.27.9",
+    "@changesets/cli": "^2.27.10",
     "@tauri-apps/cli": "^2.1.0",
     "cross-env": "^7.0.3",
-    "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.8",
-    "typescript": "^5.6.3",
+    "prettier": "^3.4.1",
+    "prettier-plugin-tailwindcss": "^0.6.9",
+    "typescript": "^5.7.2",
     "untun": "^0.1.3"
   }
 }
