--- a/package.json
+++ b/package.json
@@ -11,69 +11,80 @@
   "type": "module",
   "private": true,
   "volta": {
-    "node": "22.11.0"
+    "node": "22.13.1"
   },
   "engines": {
     "node": "^20.15.0 || ^22.11.0",
-    "pnpm": "^9.12.0"
+    "pnpm": "^9.15.0"
   },
-  "packageManager": "pnpm@9.14.4",
+  "packageManager": "pnpm@9.15.4",
   "scripts": {
+    "prepare": "husky || true",
     "postinstall": "nuxt prepare",
     "dev": "nuxt dev",
+    "detect": "gitleaks git --verbose",
     "lint": "eslint . --fix",
-    "format": "prettier .  --write",
+    "format": "prettier . --write",
     "build": "nuxt build && cp -r static .output/static",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
+    "start": "node --env-file=.env.prod .output/server/index.mjs",
     "clean": "nuxt cleanup",
-    "start": "node .output/server/index.mjs",
     "docker:build": "docker build --build-arg VERSION=dev -t portfolio-shirsendu:dev .",
-    "docker:start": "docker run --detach --name portfolio-shirsendu-dev --mount type=bind,source=$(pwd)/static,target=/app/static,readonly --env-file .env.prod -p 1000:3000 portfolio-shirsendu:dev",
-    "tunnel": "untun tunnel --port 3000 http://localhost:3000",
+    "docker:start": "docker run --detach --name portfolio-shirsendu-dev --mount type=bind,source=$(pwd)/static,target=/app/static,readonly --env-file .env.prod -p 4100:3000 portfolio-shirsendu:dev",
+    "tunnel": "untun tunnel --port 4100 http://localhost:4100",
     "tauri": "tauri",
-    "tauri:dev": "cross-env PLATFORM_ENV=native tauri dev",
-    "tauri:build": "cross-env PLATFORM_ENV=native tauri build",
-    "tauri:dev:mobile": "cross-env PLATFORM_ENV=native tauri android dev",
-    "tauri:build:mobile": "cross-env PLATFORM_ENV=native tauri android build"
+    "tauri:dev": "tauri dev",
+    "tauri:build": "tauri build",
+    "tauri:dev:mobile": "tauri android dev",
+    "tauri:build:mobile": "tauri android build"
   },
   "dependencies": {
     "@notionhq/client": "^2.2.15",
-    "@nuxt/eslint": "^0.7.2",
-    "@nuxt/fonts": "^0.10.2",
-    "@nuxt/image": "^1.8.1",
+    "@nuxt/content": "^2.13.4",
+    "@nuxt/eslint": "^0.7.5",
+    "@nuxt/fonts": "^0.10.3",
+    "@nuxt/icon": "^1.10.3",
+    "@nuxt/image": "^1.9.0",
     "@nuxt/scripts": "^0.9.5",
-    "@nuxt/test-utils": "^3.14.4",
+    "@nuxt/test-utils": "^3.15.4",
     "@nuxtjs/color-mode": "^3.5.2",
-    "@nuxtjs/seo": "^2.0.2",
-    "@nuxtjs/tailwindcss": "^6.12.2",
+    "@nuxtjs/i18n": "^9.1.2",
+    "@nuxtjs/seo": "2.1.0",
+    "@nuxtjs/tailwindcss": "^6.13.1",
     "@splidejs/splide-extension-grid": "^0.4.1",
-    "@tauri-apps/api": "^2.1.1",
+    "@tauri-apps/api": "^2.2.0",
     "@vite-pwa/nuxt": "^0.10.6",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue-email/components": "^0.0.21",
     "@vue-email/render": "^0.0.9",
-    "@vueuse/core": "^12.0.0",
-    "@vueuse/nuxt": "^12.0.0",
+    "@vueuse/core": "^12.4.0",
+    "@vueuse/nuxt": "^12.4.0",
     "confbox": "^0.1.8",
     "date-fns": "^4.1.0",
-    "nuxt": "^3.14.1592",
-    "nuxt-icons": "^3.2.1",
+    "eslint": "^9.18.0",
+    "nuxt": "^3.15.2",
     "nuxt-nodemailer": "^1.1.2",
     "nuxt-splide": "^1.1.1",
     "nuxt-time": "^1.0.3",
-    "vee-validate": "^4.14.7",
+    "vee-validate": "^4.15.0",
     "vue": "latest",
     "vue-router": "latest",
-    "zod": "^3.23.8"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@changesets/cli": "^2.27.10",
-    "@tauri-apps/cli": "^2.1.0",
-    "cross-env": "^7.0.3",
-    "prettier": "^3.4.1",
-    "prettier-plugin-tailwindcss": "^0.6.9",
-    "typescript": "^5.7.2",
-    "untun": "^0.1.3"
+    "@changesets/cli": "^2.27.11",
+    "@commitlint/cli": "^19.6.1",
+    "@commitlint/config-conventional": "^19.6.0",
+    "@tauri-apps/cli": "^2.2.5",
+    "@vue/test-utils": "^2.4.6",
+    "happy-dom": "^15.11.7",
+    "husky": "^9.1.7",
+    "playwright-core": "^1.49.1",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.10",
+    "typescript": "^5.7.3",
+    "untun": "^0.1.3",
+    "vitest": "^2.1.8"
   }
 }
