--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,20 +6,17 @@ on:
     tags:
       - 'v*.*.*'
 
-concurrency: ${{ github.workflow }}-${{ github.ref_name }}
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 env:
   REPO: ${{ github.repository }}
   REGISTRY: ${{ vars.REGISTRY }}
   USERNAME: ${{ vars.USERNAME }}
-  PORT: ${{ vars.PORT }}
-  NODE_ENV: ${{ vars.NODE_ENV }}
-  NITRO_PRESET: ${{ vars.NITRO_PRESET }}
-  NUXT_PUBLIC_API_BASE_URL: ${{ vars.NUXT_PUBLIC_API_BASE_URL }}
-  NUXT_PUBLIC_SCRIPTS_GOOGLE_ANALYTICS_ID: ${{ vars.NUXT_PUBLIC_SCRIPTS_GOOGLE_ANALYTICS_ID }}
 
 jobs:
-  build_web:
+  build-web:
     runs-on: ubuntu-latest
 
     permissions:
@@ -43,8 +40,6 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-        with:
-          platforms: linux/amd64,linux/arm64
 
       - name: Log in to the Container registry
         uses: docker/login-action@v3
@@ -77,13 +72,12 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
-          platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
-            BUILDTIME=${{ steps.metadata.outputs.buildtime }}
             VERSION=${{ steps.metadata.outputs.version }}
+            BUILD_TIME=${{ steps.metadata.outputs.buildtime }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -94,8 +88,8 @@ jobs:
           subject-digest: ${{ steps.push.outputs.digest }}
           push-to-registry: false
 
-  deploy_web:
-    needs: build_web
+  deploy-web:
+    needs: build-web
     runs-on: ubuntu-latest
 
     steps:
@@ -106,26 +100,11 @@ jobs:
           username: ${{ secrets.VPS_USERNAME }}
           password: ${{ secrets.VPS_PASSWORD }}
           script: |
-            # Pull new image
-            docker pull ${{ needs.build_web.outputs.image_name }}
+            cd ~/${{ needs.build-web.outputs.image_title }}
+            curl -O https://raw.githubusercontent.com/${{ env.REPO }}/refs/heads/main/docker-compose.yml
+            docker compose -f docker-compose.yml up -d
 
-            # Stop the existing container
-            docker stop ${{ needs.build_web.outputs.image_title }} || true
-            docker rm ${{ needs.build_web.outputs.image_title }} || true
-
-            # Create and start new container
-            docker run --detach \
-              --name ${{ needs.build_web.outputs.image_title }} \
-              --restart unless-stopped \
-              --mount type=bind,source=$(pwd)/${{ needs.build_web.outputs.image_title }}/static,target=/app/static,readonly \
-              --env-file ~/${{ needs.build_web.outputs.image_title }}/.env.prod \
-              -p ${{ env.PORT }}:3000 \
-              ${{ needs.build_web.outputs.image_name }}
-
-            # Clean up unused images
-            docker image prune -f
-
-  build_desktop:
+  build-desktop:
     permissions:
       contents: write
 
@@ -193,7 +172,7 @@ jobs:
   #   needs: build_desktop
   #   runs-on: ubuntu-latest
 
-  build_mobile:
+  build-mobile:
     permissions:
       contents: write
 
@@ -273,6 +252,6 @@ jobs:
           asset_name: Shirsendu.Bairagi_${{ github.ref }}_arm64.apk
           tag: ${{ github.ref }}
 
-  # deploy_mobile:
-  #   needs: build_mobile
+  # deploy-mobile:
+  #   needs: build-mobile
   #   runs-on: ubuntu-latest
