--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -9,14 +9,20 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: write
+      pull-requests: write
+
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
+      - name: Setup Corepack for pnpm
+        run: corepack enable
 
-      - name: Setup Node.js
+      - name: Setup Node.js with Corepack
         uses: actions/setup-node@v4
         with:
           node-version: lts/*
@@ -25,19 +31,22 @@ jobs:
       - name: Install Dependencies
         run: pnpm install
 
+      - name: Build Artifacts
+        run: pnpm build
+
       # - name: Run Tests
       #   run: pnpm test
 
-      # - name: Lint Code
-      #   run: pnpm linit
+      - name: Lint Code
+        run: pnpm lint || echo "Linting failed, but continuing"
 
-      # - name: Format Code
-      #   run: pnpm format
-
-      - name: Bulid Artifacts
-        run: pnpm build
+      - name: Format Code
+        run: pnpm format
 
       - name: Create Release Pull Request
         uses: changesets/action@v1
+        with:
+          title: 'chore(release): update version'
+          commit: 'chore(release): update version'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
