fix(docker): correct image declaration in docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,8 @@
-name: 'portfolio-shirsendu-dev'
+name: 'portfolio-shirsendu'
 services:
   app:
-    # image: 'ghcr.io/algostract/portfolio-shirsendu:latest'
+    image: 'ghcr.io/algostract/portfolio-shirsendu:latest'
     restart: on-failure:3
-    build: .
     volumes:
       - type: bind
         source: ./static
