--- a/static/data/projects.yml
+++ b/static/data/projects.yml
@@ -1,4 +1,26 @@
 ---
+- name: Background Changer
+  repo: shba007/background-changer
+  category: 'web-app'
+  technologies:
+    languages:
+      - typescript
+    frameworks:
+      - react
+      - tailwindcss
+  createdAt: ''
+  appURL: 'https://shba007.github.io/background-changer/'
+  videoURL:
+  images:
+    # - id: baaf3035-3f75-4759-9072-eb5ca865b0de
+    #   title: Background Changer Screenshot 1
+
+    # - id: 27723f41-31fa-4e62-b69f-529aadf32721
+    #   title: Background Changer Screenshot 2
+
+    # - id: ac90c5e5-81fb-4f66-b304-2cab11fb8140
+    #   title: Background Changer Screenshot 3
+
 - name: Unpsy
   repo: shba007/unpsy-app
   category: 'web-app'
