--- a/package.json
+++ b/package.json
@@ -6,18 +6,18 @@
   "license": "LGPL-3.0-or-later",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Algostract/portfolio-shirsendu.git"
+    "url": "https://github.com/Algostract/portfolio-shirsendu.git"
   },
   "type": "module",
   "private": true,
   "volta": {
-    "node": "22.13.1"
+    "node": "22.14.0"
   },
   "engines": {
     "node": "^20.15.0 || ^22.11.0",
-    "pnpm": "^9.15.0"
+    "pnpm": "^9.15.0 || ^10.2.0"
   },
-  "packageManager": "pnpm@9.15.4",
+  "packageManager": "pnpm@10.4.1",
   "scripts": {
     "prepare": "husky || true",
     "postinstall": "nuxt prepare",
@@ -40,17 +40,17 @@
     "tauri:build:mobile": "tauri android build"
   },
   "dependencies": {
-    "@notionhq/client": "^2.2.15",
-    "@nuxt/content": "^2.13.4",
-    "@nuxt/eslint": "^0.7.5",
+    "@notionhq/client": "^2.2.16",
+    "@nuxt/content": "^3.1.1",
+    "@nuxt/eslint": "^1.1.0",
     "@nuxt/fonts": "^0.10.3",
     "@nuxt/icon": "^1.10.3",
     "@nuxt/image": "^1.9.0",
-    "@nuxt/scripts": "^0.9.5",
+    "@nuxt/scripts": "^0.10.3",
     "@nuxt/test-utils": "^3.15.4",
     "@nuxtjs/color-mode": "^3.5.2",
-    "@nuxtjs/i18n": "^9.1.2",
-    "@nuxtjs/seo": "2.1.0",
+    "@nuxtjs/i18n": "^9.2.0",
+    "@nuxtjs/seo": "2.1.1",
     "@nuxtjs/tailwindcss": "^6.13.1",
     "@splidejs/splide-extension-grid": "^0.4.1",
     "@tauri-apps/api": "^2.2.0",
@@ -58,33 +58,41 @@
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue-email/components": "^0.0.21",
     "@vue-email/render": "^0.0.9",
-    "@vueuse/core": "^12.4.0",
-    "@vueuse/nuxt": "^12.4.0",
+    "@vueuse/core": "^12.7.0",
+    "@vueuse/nuxt": "^12.7.0",
     "confbox": "^0.1.8",
     "date-fns": "^4.1.0",
-    "eslint": "^9.18.0",
-    "nuxt": "^3.15.2",
+    "eslint": "^9.20.1",
+    "nuxt": "^3.15.4",
     "nuxt-nodemailer": "^1.1.2",
     "nuxt-splide": "^1.1.1",
     "nuxt-time": "^1.0.3",
     "vee-validate": "^4.15.0",
     "vue": "latest",
     "vue-router": "latest",
-    "zod": "^3.24.1"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@changesets/cli": "^2.27.11",
-    "@commitlint/cli": "^19.6.1",
-    "@commitlint/config-conventional": "^19.6.0",
-    "@tauri-apps/cli": "^2.2.5",
+    "@changesets/cli": "^2.28.0",
+    "@commitlint/cli": "^19.7.1",
+    "@commitlint/config-conventional": "^19.7.1",
+    "@tauri-apps/cli": "^2.2.7",
     "@vue/test-utils": "^2.4.6",
-    "happy-dom": "^15.11.7",
+    "happy-dom": "^17.1.1",
     "husky": "^9.1.7",
-    "playwright-core": "^1.49.1",
-    "prettier": "^3.4.2",
-    "prettier-plugin-tailwindcss": "^0.6.10",
+    "playwright-core": "^1.50.1",
+    "prettier": "^3.5.1",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "typescript": "^5.7.3",
     "untun": "^0.1.3",
-    "vitest": "^2.1.8"
+    "vitest": "^3.0.6"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@parcel/watcher",
+      "better-sqlite3",
+      "esbuild",
+      "sharp"
+    ]
   }
 }
