--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
   "name": "portfolio-shirsendu",
-  "version": "1.16.5",
+  "version": "1.17.0",
   "description": "Shirsendu's devfolio showcasing his projects, experience and certification in a visually appealing manner",
   "author": "Shirsendu Bairagi <shirsendu2001@gmail.com>",
   "license": "LGPL-3.0-or-later",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Algostract/portfolio-shirsendu.git"
+    "url": "https://github.com/Algostract/portfolio-shirsendu.git"
   },
   "type": "module",
   "private": true,
   "volta": {
-    "node": "22.13.1"
+    "node": "22.14.0"
   },
   "engines": {
     "node": "^20.15.0 || ^22.11.0",
-    "pnpm": "^9.15.0"
+    "pnpm": "^9.15.0 || ^10.2.0"
   },
-  "packageManager": "pnpm@9.15.4",
+  "packageManager": "pnpm@10.7.1",
   "scripts": {
     "prepare": "husky || true",
     "postinstall": "nuxt prepare",
@@ -25,6 +25,7 @@
     "detect": "gitleaks git --verbose",
     "lint": "eslint . --fix",
     "format": "prettier . --write",
+    "test:load": "k6 run tests/load.test.ts",
     "build": "nuxt build && cp -r static .output/static",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
@@ -40,51 +41,60 @@
     "tauri:build:mobile": "tauri android build"
   },
   "dependencies": {
-    "@notionhq/client": "^2.2.15",
-    "@nuxt/content": "^2.13.4",
-    "@nuxt/eslint": "^0.7.5",
-    "@nuxt/fonts": "^0.10.3",
-    "@nuxt/icon": "^1.10.3",
-    "@nuxt/image": "^1.9.0",
-    "@nuxt/scripts": "^0.9.5",
-    "@nuxt/test-utils": "^3.15.4",
+    "@dotenvx/dotenvx": "^1.39.1",
+    "@notionhq/client": "^2.3.0",
+    "@nuxt/eslint": "^1.3.0",
+    "@nuxt/fonts": "^0.11.1",
+    "@nuxt/icon": "^1.11.0",
+    "@nuxt/image": "^1.10.0",
+    "@nuxt/scripts": "0.11.5",
+    "@nuxt/test-utils": "^3.17.2",
     "@nuxtjs/color-mode": "^3.5.2",
-    "@nuxtjs/i18n": "^9.1.2",
-    "@nuxtjs/seo": "2.1.0",
-    "@nuxtjs/tailwindcss": "^6.13.1",
+    "@nuxtjs/i18n": "^9.5.2",
+    "@nuxtjs/seo": "^3.0.2",
+    "@nuxtjs/tailwindcss": "^6.13.2",
     "@splidejs/splide-extension-grid": "^0.4.1",
-    "@tauri-apps/api": "^2.2.0",
-    "@vite-pwa/nuxt": "^0.10.6",
-    "@vitejs/plugin-vue": "^5.2.1",
+    "@tauri-apps/api": "^2.4.1",
+    "@unhead/vue": "^2.0.3",
+    "@vite-pwa/nuxt": "^1.0.0",
+    "@vitejs/plugin-vue": "^5.2.3",
     "@vue-email/components": "^0.0.21",
     "@vue-email/render": "^0.0.9",
-    "@vueuse/core": "^12.4.0",
-    "@vueuse/nuxt": "^12.4.0",
-    "confbox": "^0.1.8",
+    "@vueuse/core": "^13.0.0",
+    "@vueuse/nuxt": "^13.0.0",
+    "confbox": "^0.2.2",
     "date-fns": "^4.1.0",
-    "eslint": "^9.18.0",
-    "nuxt": "^3.15.2",
+    "eslint": "^9.24.0",
+    "nuxt": "^3.16.2",
     "nuxt-nodemailer": "^1.1.2",
     "nuxt-splide": "^1.1.1",
     "nuxt-time": "^1.0.3",
     "vee-validate": "^4.15.0",
     "vue": "latest",
     "vue-router": "latest",
-    "zod": "^3.24.1"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@changesets/cli": "^2.27.11",
-    "@commitlint/cli": "^19.6.1",
-    "@commitlint/config-conventional": "^19.6.0",
-    "@tauri-apps/cli": "^2.2.5",
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
+    "@tauri-apps/cli": "^2.4.1",
+    "@types/k6": "^1.0.2",
     "@vue/test-utils": "^2.4.6",
-    "happy-dom": "^15.11.7",
+    "happy-dom": "^17.4.4",
     "husky": "^9.1.7",
-    "playwright-core": "^1.49.1",
-    "prettier": "^3.4.2",
-    "prettier-plugin-tailwindcss": "^0.6.10",
-    "typescript": "^5.7.3",
+    "playwright-core": "^1.51.1",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "typescript": "^5.8.3",
     "untun": "^0.1.3",
-    "vitest": "^2.1.8"
+    "vitest": "^3.1.1"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@parcel/watcher",
+      "better-sqlite3",
+      "esbuild",
+      "sharp"
+    ]
   }
 }
